--- a/Sula.qmd
+++ b/Sula.qmd
@@ -3,3 +3,15 @@ title: "Sula"
 format: html
 editor: visual
 ---
+```{r}
+#| message: false
+here::i_am("Final_lab_Sula.Rproj")
+library(here)
+library(vroom)
+library(dplyr)
+library(tidyr)
+library(ggplot2)
+library(knitr)
+library(stringr)
+```
+
