--- a/Sula.qmd
+++ b/Sula.qmd
@@ -84,7 +84,7 @@ Most_Massive_star = stars$star_name[max_mass],
 knitr::kable(extreme_mass_stars, col.names = c("Most Massive Star", "Most Massive Value", "Least Massive Star", "Least Massive Value"), align = c("l", "c", "l", "c"))
 ```
 
-# 3 Factions
+# Factions
 ## Question 7
 In the Battletech universe, star systems are controlled by factions. Committing into git the two data:
 ALLBTFACTIONS.csv
@@ -203,4 +203,5 @@ ggplot(stars_split, aes(x = Temperature_Class)) +
        y = "Number of Stars")
   theme_minimal()
 ```
+
 
